# rust-cli-fitness

./: .gitignore  Cargo.toml  README.md
src/: calc.rs  display.rs  helper.rs  logic.rs  main.rs  users.rs
