[package]
name = "rust_fitness_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
unicode-segmentation = "=1.12.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
crossterm = "0.29"
colored = "3.1.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
